--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
         <div class="gray-block"></div>
       </section>
       <section class="grid-main details">
-        <div class="gray-block"></div>
+        <div class="gray-block"></div>    
 
         <picture class="details-image">
           <source
             media="(width >= 75em)"
-            srcset="/assets/desktop/image-phone-and-keyboard.jpg"
+            srcset=".\assets\plant-smartphone-near-laptop.jpg"
           />
           <source
             media="(width >= 43.75em)"
-            srcset="/assets/tablet/image-phone-and-keyboard.jpg"
+            srcset=".\assets\plant-smartphone-near-laptop.jpg"
           />
           <img
-            src="/assets/mobile/image-phone-and-keyboard.jpg"
+            src=".\assets\plant-smartphone-near-laptop.jpg"
             alt="phone and keyboard"
             width="744"
             height="662"
@@ -74,14 +74,14 @@
         <picture class="details-image">
           <source
             media="(width >= 75em)"
-            srcset="/assets/desktop/image-glass-and-keyboard.jpg"
+            srcset=".\assets\gradient-illuminated-neon-gaming-desk-setup-with-keyboard.jpg"
           />
           <source
             media="(width >= 43.75em)"
-            srcset="/assets/tablet/image-glass-and-keyboard.jpg"
+            srcset=".\assets\gradient-illuminated-neon-gaming-desk-setup-with-keyboard.jpg"
           />
           <img
-            src="/assets/mobile/image-glass-and-keyboard.jpg"
+            src=".\assets\gradient-illuminated-neon-gaming-desk-setup-with-keyboard.jpg"
             alt="mechanical keyboard"
             width="440"
             height="386"
@@ -101,7 +101,7 @@
         <div class="feature">
           <div class="icon">
             <img
-              src="/assets/shared/icon-compatible.svg"
+              src=".\assets\coding.png"
               alt=""
               width="32"
               height="32"
@@ -117,7 +117,7 @@
         <div class="feature">
           <div class="icon">
             <img
-              src="/assets/shared/icon-bluetooth.svg"
+              src=".\assets\bluetooth.png"
               alt=""
               width="32"
               height="32"
@@ -133,7 +133,7 @@
         <div class="feature">
           <div class="icon">
             <img
-              src="/assets/shared/icon-battery.svg"
+              src=".\assets\assessment.png"
               alt=""
               width="32"
               height="32"
@@ -149,7 +149,7 @@
         <div class="feature">
           <div class="icon">
             <img
-              src="/assets/shared/icon-light.svg"
+              src=".\assets\idea.png"
               alt=""
               width="32"
               height="32"
