Final project done

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <nav class="grid-main topnav">
         <a href="">
           <img
-            src="/assets/shared/logo.svg"
-            width="40"
-            height="40"
+            src=".\assets\letter-z.png"
+            width="50"
+            height="50"
             alt="Typing Tornado"
         /></a>
         <button class="button blue">Pre-Access now</button>
@@ -27,7 +27,7 @@
           <h1 class="headline">Typing Tornado</h1>
           <p class="description">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Blanditiis aut fugit quasi eveniet mollitia ullam quo harum.
+            Blanditiis aut fugit quasi eveniet mollitia ullam.
           <button class="button orange">Pre Access now</button>
           <p class="info"><strong class="caps">Outdate on 14/24</strong></p>
         </div>
@@ -35,14 +35,14 @@
         <picture class="hero-image">
           <source
             media="(width >= 75em)"
-            srcset=".\assets\letter-z.png"
+            srcset=".\assets\view-neon-illuminated-gaming-desk-setup-with-keyboard.jpg"
           />
           <source
             media="(width >= 43.75em)"
-            srcset=".\assets\letter-z.png" 
+            srcset=".\assets\view-neon-illuminated-gaming-desk-setup-with-keyboard.jpg" 
           />
           <img
-            src=".\assets\letter-z.png"
+            src=".\assets\view-neon-illuminated-gaming-desk-setup-with-keyboard.jpg"
             alt="mechanical keyboard"
             width="1080"
             height="960"
@@ -101,7 +101,7 @@
         <div class="feature">
           <div class="icon">
             <img
-              src=".\assets\coding.png"
+              src=".\assets\icons8-studio-display-100.png"
               alt=""
               width="32"
               height="32"
@@ -117,13 +117,13 @@
         <div class="feature">
           <div class="icon">
             <img
-              src=".\assets\bluetooth.png"
+              src=".\assets\icons8-bluetooth-64.png"
               alt=""
               width="32"
               height="32"
             />
           </div>
-          <h3>Untethered with bluetooth</h3>
+          <h3>Untethered bluetooth</h3>
           <p class="small">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Ex nesciunt soluta similique nobis, commodi architecto.
@@ -133,7 +133,7 @@
         <div class="feature">
           <div class="icon">
             <img
-              src=".\assets\assessment.png"
+              src=".\assets\icons8-car-battery-100.png"
               alt=""
               width="32"
               height="32"
@@ -149,7 +149,7 @@
         <div class="feature">
           <div class="icon">
             <img
-              src=".\assets\idea.png"
+              src=".\assets\icons8-idea-sharing-90.png"
               alt=""
               width="32"
               height="32"
