--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
           </div>
           <h3>Extremely Cohesive</h3>
           <p class="small">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Accusantium explicabo nisi qui repudiandae quasi ratione 
-            facere animi,!.
+            Lorem ipsum dolor sit amet consectetur
+             adipisicing elit. Culpa, officiis atq
+             ue. Fugiat adipisci suscipit necessitatibus.
           </p>
         </div>
         <div class="feature">
@@ -125,9 +125,9 @@
           </div>
           <h3>Untethered bluetooth</h3>
           <p class="small">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Ex nesciunt soluta similique nobis, commodi architecto.
-            Est suscipit neque labore sed minus nostrum culpa deleniti..
+            Lorem ipsum dolor sit amet consectetur
+             adipisicing elit. Culpa, officiis atq
+             ue. Fugiat adipisci suscipit necessitatibus.
           </p>
         </div>
         <div class="feature">
@@ -141,9 +141,9 @@
           </div>
           <h3>Power Packed battery</h3>
           <p class="small">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Et deserunt unde, rerum consectetur magni commodi!
-            Mollitia quae ipsa repellat expedita, repellendus aliquam! Excepturi?.
+            Lorem ipsum dolor sit amet consectetur
+             adipisicing elit. Culpa, officiis atq
+             ue. Fugiat adipisci suscipit necessitatibus.
           </p>
         </div>
         <div class="feature">
@@ -157,9 +157,9 @@
           </div>
           <h3>RGB Enlighten modes</h3>
           <p class="small">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-             Unde aliquam temporibus molestias illum assumenda
-              nam, harum natus ratione recusandae fugit aperiam..
+            Lorem ipsum dolor sit amet consectetur
+             adipisicing elit. Culpa, officiis atq
+             ue. Fugiat adipisci suscipit necessitatibus.
           </p>
         </div>
       </section>
