--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <header>
-      <nav class="grid-main topnav">
+      <nav class="grid-main topnav">   
         <a href="">
-          <img
+          <img class="mine"
             src=".\assets\letter-z.png"
             width="50"
             height="50"
