--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href=".\assets\letter-z.png" type="image/png">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>My product Landing website | in vanilla html css </title>
   </head>
   <body>
@@ -18,7 +19,7 @@
             height="50"
             alt="Typing Tornado"
         /></a>
-        <button class="button blue">Pre-Access now</button>
+       <a class="smooth" href="#name"> <img class="animate__animated animate__bounce animate__delay-2s" src=".\assets\arrow-down.png" alt="" width="26" height="33" ></a><button class="button blue">Pre-Access now</button>
       </nav>
     </header>
     <main>
@@ -63,7 +64,7 @@
             media="(width >= 43.75em)"
             srcset=".\assets\plant-smartphone-near-laptop.jpg"
           />
-          <img
+          <img class="anim"
             src=".\assets\plant-smartphone-near-laptop.jpg"
             alt="phone and keyboard"
             width="744"
@@ -80,7 +81,7 @@
             media="(width >= 43.75em)"
             srcset=".\assets\gradient-illuminated-neon-gaming-desk-setup-with-keyboard.jpg"
           />
-          <img
+          <img class="anim"
             src=".\assets\gradient-illuminated-neon-gaming-desk-setup-with-keyboard.jpg"
             alt="mechanical keyboard"
             width="440"
@@ -175,7 +176,7 @@
 
 
 
-    <footer>
+    <footer id="name">
       <p><strong>Typing Tornado 2024</strong> | All Rights Reserved</p>
     </footer>
 
