--- a/index.html
+++ b/index.html
@@ -162,22 +162,42 @@
              adipisicing elit. Culpa, officiis atq
              ue. Fugiat adipisci suscipit necessitatibus.
           </p>
-        </div>
-      </section>
+        </div>  
+      </section>   
     </main>
 <br><br>
 
 
 
 
+<div class="footer">
+  <ul>
+    
+    <li><a class="links" href="https://www.linkedin.com/in/muhammad-zohaib-7b2223285/">
+      <img src=".\assets\icons8-linkedin-96.png" alt="Linkdin" width="40" height="40"></a></li>
+    <li><a class="links" href="mailto:mdzohaibdeveloper1@gmail.com"></a>
+      <img src=".\assets\icons8-email-64.png" alt="Email" width="45" height="45"></li>
+    <li><a class="links" href="https://instagram.com/zo.haib2860">
+      <img src=".\assets\icons8-instagram-96.png" alt="instagram" width="40" height="40">
+    </a></li>
+    <li><a class="links" href="https://github.com/zohaibdevpr">
+      <img src=".\assets\icons8-github-96.png" alt="Github" width="40" height="40">
+    </a></li>
+    <li><a class="links" href="https://youtube.com/zohaibdevpr">
+      <img src=".\assets\icons8-youtube-offers-videos-and-music-and-original-content-96.png" alt="youtube" width="40" height="40">
+    </a></li>
+    <li>
+      <p class="para">👋</p>
+    </li> 
+  </ul>
+</div>
 
 
 
 
-
-    <footer id="name">
-      <p><strong>Typing Tornado 2024</strong> | All Rights Reserved</p>
-    </footer>
+    <div class="brand"  id="name">
+      <p class="two"><strong>Typing Tornado 2024</strong> | All Rights Reserved</p>
+    </div>
 
   </body>
 </html>
