--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <nav class="grid-main topnav">   
-        <a href="">
+        <a href="https://github.com/zohaibdevpr">
           <img class="mine"
             src=".\assets\letter-z.png"
             width="50"
@@ -169,34 +169,35 @@
 
 
 
-
+<!-- footer in which social links occur  -->
 <div class="footer">
+  <h4>Let's Connect</h4>
   <ul>
     
     <li><a class="links" href="https://www.linkedin.com/in/muhammad-zohaib-7b2223285/">
-      <img src=".\assets\icons8-linkedin-96.png" alt="Linkdin" width="40" height="40"></a></li>
+      <img class="social" src=".\assets\icons8-linkedin-96.png" alt="Linkdin" width="30" height="30"></a></li>
     <li><a class="links" href="mailto:mdzohaibdeveloper1@gmail.com"></a>
-      <img src=".\assets\icons8-email-64.png" alt="Email" width="45" height="45"></li>
+      <img class="social" src=".\assets\icons8-email-64.png" alt="Email" width="35" height="35"></li>
     <li><a class="links" href="https://instagram.com/zo.haib2860">
-      <img src=".\assets\icons8-instagram-96.png" alt="instagram" width="40" height="40">
+      <img class="social" src=".\assets\icons8-instagram-96.png" alt="instagram" width="30" height="30">
     </a></li>
     <li><a class="links" href="https://github.com/zohaibdevpr">
-      <img src=".\assets\icons8-github-96.png" alt="Github" width="40" height="40">
+      <img class="social" src=".\assets\icons8-github-96.png" alt="Github" width="30" height="30">
     </a></li>
-    <li><a class="links" href="https://youtube.com/zohaibdevpr">
-      <img src=".\assets\icons8-youtube-offers-videos-and-music-and-original-content-96.png" alt="youtube" width="40" height="40">
+    <li><a class="links" href="https://www.youtube.com/@muhammad_zohaib936">
+      <img class="social" src=".\assets\icons8-youtube-offers-videos-and-music-and-original-content-96.png" alt="youtube" width="30" height="30">
     </a></li>
     <li>
-      <p class="para">👋</p>
+      <p class="para">👋</p>   
     </li> 
   </ul>
 </div>
-
-
-
-
     <div class="brand"  id="name">
-      <p class="two"><strong>Typing Tornado 2024</strong> | All Rights Reserved</p>
+      <a class="move" href="https://github.com/zohaibdevpr">
+        <img class="foot"
+          src=".\assets\letter-z.png"
+          alt="Typing Tornado"
+      /></a><p class="two"><strong>Typing Tornado 2024</strong> Made by 💖</p>
     </div>
 
   </body>
