Project is done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             height="50"
             alt="Typing Tornado"
         /></a>
-       <a class="smooth" href="#name"> <img class="animate__animated animate__bounce animate__delay-2s" src=".\assets\arrow-down.png" alt="" width="26" height="33" ></a><button class="button blue">Pre-Access now</button>
+       <a class="smooth" href="#name"> <img class="animate__animated animate__bounce animate__delay-2s" src=".\assets\arrow-down.png" alt="" width="26" height="33" style=" filter: drop-shadow(0 0 5px var(--blue-lt)); text-shadow: 0 0 25px rgb(226, 45, 45);" ></a><button class="button blue">Pre-Access now</button>
       </nav>
     </header>
     <main>
