Files added again

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="grid-main topnav">   
         <a href="https://github.com/zohaibdevpr">
           <img class="mine"
-            src=".\assets\letter-z.png"
+            src=".\assets\letter-z (1).png"
             width="50"
             height="50"
             alt="Typing Tornado"
@@ -36,14 +36,14 @@
         <picture class="hero-image">
           <source
             media="(width >= 75em)"
-            srcset=".\assets\view-neon-illuminated-gaming-desk-setup-with-keyboard.jpg"
+            srcset=".\assets\view-neon-illuminated-gaming-desk-setup-with-keyboard (1).jpg"
           />
           <source
             media="(width >= 43.75em)"
-            srcset=".\assets\view-neon-illuminated-gaming-desk-setup-with-keyboard.jpg" 
+            srcset=".\assets\view-neon-illuminated-gaming-desk-setup-with-keyboard (1).jpg" 
           />
           <img
-            src=".\assets\view-neon-illuminated-gaming-desk-setup-with-keyboard.jpg"
+            src=".\assets\view-neon-illuminated-gaming-desk-setup-with-keyboard (1).jpg"
             alt="mechanical keyboard"
             width="1080"
             height="960"
@@ -195,7 +195,7 @@
     <div class="brand"  id="name">
       <a class="move" href="https://github.com/zohaibdevpr">
         <img class="foot"
-          src=".\assets\letter-z.png"
+          src=".\assets\letter-z (1).png"
           alt="Typing Tornado"
       /></a><p class="two"><strong>Typing Tornado 2024</strong> | Made by 💖</p>
     </div>
@@ -238,5 +238,10 @@
 
   </body>
 </html>
+
+
+
+
+
 
 
