--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
         <picture class="details-image">
           <source
             media="(width >= 75em)"
-            srcset=".\assets\gradient-illuminated-neon-gaming-desk-setup-with-keyboard.jpg"
+            srcset=".\assets\gradient-illuminated-neon-gaming-desk-setup-with-keyboard (1).jpg"
           />
           <source
             media="(width >= 43.75em)"
-            srcset=".\assets\gradient-illuminated-neon-gaming-desk-setup-with-keyboard.jpg"
+            srcset=".\assets\gradient-illuminated-neon-gaming-desk-setup-with-keyboard (1).jpg"
           />
           <img class="anim"
-            src=".\assets\gradient-illuminated-neon-gaming-desk-setup-with-keyboard.jpg"
+            src=".\assets\gradient-illuminated-neon-gaming-desk-setup-with-keyboard (1).jpg"
             alt="mechanical keyboard"
             width="440"
             height="386"
