--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <picture class="details-image">
           <source
             media="(width >= 75em)"
-            srcset=".\assets\plant-smartphone-near-laptop.jpg"
+            srcset=".\assets\plant-smartphone-near-laptop (1).jpg"
           />
           <source
             media="(width >= 43.75em)"
-            srcset=".\assets\plant-smartphone-near-laptop.jpg"
+            srcset=".\assets\plant-smartphone-near-laptop (1).jpg"
           />
           <img class="anim"
-            src=".\assets\plant-smartphone-near-laptop.jpg"
+            src=".\assets\plant-smartphone-near-laptop (1).jpg"
             alt="phone and keyboard"
             width="744"
             height="662"
